[package]
name = "todo"
version = "0.1.0"
authors = ["Alko89 <alefer89@gmail.com>"]

[dependencies]
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
r2d2 = "0.7"
diesel = { version = "0.12", features = ["sqlite"] }
diesel_codegen = { version = "0.12", features = ["sqlite"] }
r2d2-diesel = "0.12"

[dependencies.rocket_contrib]
version = "0.2.6"
default-features = false
features = ["tera_templates"]
